[package]
name = "skopje"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
deadpool-postgres = "0.14.1"
futures = "0.3.31"
postgres-types = "0.2.9"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
skopje-macros = { version = "0.1.0", path = "./skopje-macros" }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tracing = "0.1.41"
