[package]
name = "skopje"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
bimap = "0.6.3"
chrono = "0.4.41"
bytesize = "2.0.1"
deadpool-postgres = "0.14.1"
futures = "0.3.31"
num = "0.4.3"
postgres-types = "0.2.9"
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
skopje-macros = { version = "0.1.0", path = "./skopje-macros" }
tokio = { version = "1.44.2", features = ["fs"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tracing = "0.1.41"
zip = "2.6.1"
